--- a/EndAssignment/EndAssignment.vcxproj.filters
+++ b/EndAssignment/EndAssignment.vcxproj.filters
@@ -25,6 +25,15 @@
     <Filter Include="Game Files\GameObjects\Actors">
       <UniqueIdentifier>{96a293d5-d7db-4d93-8590-163385930016}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Game Files\GameObjects\Actors\Enemies">
+      <UniqueIdentifier>{cd45854b-eb50-4aa4-ac1e-176cdb412f63}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Files\GameObjects\Actors\Items">
+      <UniqueIdentifier>{9afafb0d-213a-486c-a897-fa8f0e920f32}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Game Files\Managers">
+      <UniqueIdentifier>{2a63d0e4-2a87-4cc5-86a1-3ac0b03b4b76}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Game.cpp">
@@ -96,29 +105,41 @@
     <ClCompile Include="Fireball.cpp">
       <Filter>Game Files\GameObjects\Projectiles</Filter>
     </ClCompile>
-    <ClCompile Include="ProjectileManager.cpp">
-      <Filter>Game Files\GameObjects\Projectiles</Filter>
-    </ClCompile>
     <ClCompile Include="Kirby.cpp">
       <Filter>Game Files\GameObjects\Actors</Filter>
     </ClCompile>
     <ClCompile Include="Actor.cpp">
       <Filter>Game Files\GameObjects\Actors</Filter>
     </ClCompile>
-    <ClCompile Include="PowerStar.cpp">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClCompile>
     <ClCompile Include="Star.cpp">
       <Filter>Game Files\GameObjects\Projectiles</Filter>
     </ClCompile>
-    <ClCompile Include="WaddleDee.cpp">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClCompile>
-    <ClCompile Include="Enemy.cpp">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClCompile>
     <ClCompile Include="HudElement.cpp">
       <Filter>Game Files\GameObjects</Filter>
+    </ClCompile>
+    <ClCompile Include="Puff.cpp">
+      <Filter>Game Files\GameObjects\Projectiles</Filter>
+    </ClCompile>
+    <ClCompile Include="WaddleDee.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="PowerStar.cpp">
+      <Filter>Game Files\GameObjects\Actors\Items</Filter>
+    </ClCompile>
+    <ClCompile Include="Enemy.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="ProjectileManager.cpp">
+      <Filter>Game Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="EnemyManager.cpp">
+      <Filter>Game Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="ItemManager.cpp">
+      <Filter>Game Files\Managers</Filter>
+    </ClCompile>
+    <ClCompile Include="Item.cpp">
+      <Filter>Game Files\GameObjects\Actors\Items</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -188,29 +209,41 @@
     <ClInclude Include="Fireball.h">
       <Filter>Game Files\GameObjects\Projectiles</Filter>
     </ClInclude>
-    <ClInclude Include="ProjectileManager.h">
-      <Filter>Game Files\GameObjects\Projectiles</Filter>
-    </ClInclude>
     <ClInclude Include="Kirby.h">
       <Filter>Game Files\GameObjects\Actors</Filter>
     </ClInclude>
     <ClInclude Include="Actor.h">
       <Filter>Game Files\GameObjects\Actors</Filter>
     </ClInclude>
-    <ClInclude Include="PowerStar.h">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClInclude>
     <ClInclude Include="Star.h">
       <Filter>Game Files\GameObjects\Projectiles</Filter>
     </ClInclude>
-    <ClInclude Include="WaddleDee.h">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClInclude>
-    <ClInclude Include="Enemy.h">
-      <Filter>Game Files\GameObjects\Actors</Filter>
-    </ClInclude>
     <ClInclude Include="HudElement.h">
       <Filter>Game Files\GameObjects</Filter>
+    </ClInclude>
+    <ClInclude Include="Puff.h">
+      <Filter>Game Files\GameObjects\Projectiles</Filter>
+    </ClInclude>
+    <ClInclude Include="WaddleDee.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="PowerStar.h">
+      <Filter>Game Files\GameObjects\Actors\Items</Filter>
+    </ClInclude>
+    <ClInclude Include="Enemy.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="ProjectileManager.h">
+      <Filter>Game Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="EnemyManager.h">
+      <Filter>Game Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="ItemManager.h">
+      <Filter>Game Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="Item.h">
+      <Filter>Game Files\GameObjects\Actors\Items</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
