--- a/EndAssignment/EndAssignment.vcxproj.filters
+++ b/EndAssignment/EndAssignment.vcxproj.filters
@@ -84,9 +84,6 @@
     <ClCompile Include="Camera.cpp">
       <Filter>Game Files</Filter>
     </ClCompile>
-    <ClCompile Include="Platform.cpp">
-      <Filter>Game Files</Filter>
-    </ClCompile>
     <ClCompile Include="PowerUp.cpp">
       <Filter>Game Files\PowerUps</Filter>
     </ClCompile>
@@ -159,6 +156,24 @@
     <ClCompile Include="LevelManager.cpp">
       <Filter>Game Files\Managers</Filter>
     </ClCompile>
+    <ClCompile Include="ThrowingStar.cpp">
+      <Filter>Game Files\GameObjects\Projectiles</Filter>
+    </ClCompile>
+    <ClCompile Include="Bounder.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="LaserBall.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="StonePower.cpp">
+      <Filter>Game Files\PowerUps</Filter>
+    </ClCompile>
+    <ClCompile Include="Rocky.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
+    <ClCompile Include="Parasol.cpp">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -204,9 +219,6 @@
       <Filter>Game Files</Filter>
     </ClInclude>
     <ClInclude Include="Camera.h">
-      <Filter>Game Files</Filter>
-    </ClInclude>
-    <ClInclude Include="Platform.h">
       <Filter>Game Files</Filter>
     </ClInclude>
     <ClInclude Include="PowerUp.h">
@@ -280,6 +292,24 @@
     </ClInclude>
     <ClInclude Include="LevelManager.h">
       <Filter>Game Files\Managers</Filter>
+    </ClInclude>
+    <ClInclude Include="ThrowingStar.h">
+      <Filter>Game Files\GameObjects\Projectiles</Filter>
+    </ClInclude>
+    <ClInclude Include="Bounder.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="LaserBall.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="StonePower.h">
+      <Filter>Game Files\PowerUps</Filter>
+    </ClInclude>
+    <ClInclude Include="Rocky.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
+    </ClInclude>
+    <ClInclude Include="Parasol.h">
+      <Filter>Game Files\GameObjects\Actors\Enemies</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
