--- a/EndAssignment/EndAssignment.vcxproj
+++ b/EndAssignment/EndAssignment.vcxproj
@@ -179,6 +179,7 @@
     <ClCompile Include="Matrix2x3.cpp" />
     <ClCompile Include="OneUp.cpp" />
     <ClCompile Include="Parasol.cpp" />
+    <ClCompile Include="PauseScreen.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -236,6 +237,7 @@
     <ClInclude Include="Matrix2x3.h" />
     <ClInclude Include="OneUp.h" />
     <ClInclude Include="Parasol.h" />
+    <ClInclude Include="PauseScreen.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="PowerStar.h" />
     <ClInclude Include="PowerUp.h" />
